fix: footer not rendering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
-	min-height: 100vh;
-	min-height: 100dvh;
+	height: 100%;
 	font-family: "Atkinson Hyperlegible";
 	font-size: 1em;
 	color: #393d47;
@@ -35,7 +33,6 @@ hr {
 
 footer {
 	margin-top: auto;
-	margin-bottom: 10%;
 	text-align: center;
 }
 
@@ -62,7 +59,8 @@ footer {
 .content {
 	display: flex;
 	flex-direction: column;
-	margin: 7% 10% 0% 7%;
+	margin: 7% 10% 7% 7%;
+	height: 86%;
 }
 
 .contact {
